fix: add get EP for lights and sections
